borsh-derive/src/internals/attributes/field/snapshots/async_bounds_parsing1.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_vec_of_tokenizable(attrs.serialize)
---
K : Hash + Eq + Ord
V : Ord
