borsh-derive/src/internals/attributes/field/snapshots/async_bounds_parsing2.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_vec_of_tokenizable(attrs.serialize)
---
K : Hash + Eq + borsh :: ser :: BorshSerializeAsync
V : borsh :: ser :: BorshSerializeAsync
