borsh-derive/src/internals/attributes/field/snapshots/async_bounds_parsing_error.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "malformed async_bound attribute, expected `async_bound(deserialize = ..., serialize = ...)`",
)
