borsh-derive/src/internals/attributes/field/snapshots/async_bounds_parsing_error3.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "expected borsh async_bound attribute to be a string: `deserialize = \"...\"`",
)
