borsh-derive/src/internals/attributes/field/snapshots/async_ser_de_with_parsing1-2.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_tokenizable(attrs.deserialize_with_async)
---
third_party_impl :: deserialize_third_party
