borsh-derive/src/internals/attributes/field/snapshots/both_bounds_parsing-3.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_vec_of_tokenizable(attrs.serialize)
---
K : Hash + Eq + Ord + A
V : Ord + AA
