borsh-derive/src/internals/attributes/field/snapshots/both_bounds_parsing-4.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_vec_of_tokenizable(attrs.deserialize)
---
K : Hash + Ord + A
V : Eq + Ord + AA
