borsh-derive/src/internals/attributes/field/snapshots/bounds_parsing1.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_vec_of_tokenizable(attrs.serialize.clone())
---
K : Hash + Eq + Ord
V : Ord

